--- a/src/main/resources/templates/ott_contents/contentList.html
+++ b/src/main/resources/templates/ott_contents/contentList.html
@@ -19,7 +19,7 @@
       </style>
     </th:block>
     <th:block layout:fragment="title">
-      <title>컨텐츠 검색 결과</title>
+      <title>컨텐츠 검색</title>
     </th:block>
   </head>
   <body>
@@ -40,7 +40,7 @@
             <div class="product__item">
               <div class="product__item__pic">
                 <a
-                  th:href="${content.contentsType.name == 'MOVIE' ? '/api/movies/read/'+content.contentsId : '/api/games/read/' + content.contentsId}"
+                  th:href="${content.contentsType.name == 'MOVIE' ? '/api/movies/read/' + content.contentsId : '/api/games/read/' + content.contentsId}"
                   ><img
                     th:src="${ content.imgUrl }"
                     onerror="this.onerror=null; this.src='/images/sample.jpg';"
@@ -49,9 +49,9 @@
                     class="product__item__pic"
                   />
                   <!-- 팔로우수  -->
-                  <div class="comment_movie" th:text="'Follow: ' +${content.followCnt} + 명"></div>
+                  <div class="comment_movie"><i class="fa-solid fa-heart"></i>&nbsp;[[${content.followCnt}]]</div>
                   <!-- 댓글갯수  -->
-                  <div class="view_movie" th:text="'Re: ' + 개"></div>
+                  <div class="view_movie"><i class="fa-solid fa-comment"></i>&nbsp;[[${content.replyCnt}]]</div>
                 </a>
               </div>
 
