--- a/src/main/resources/templates/ott_contents/gameInfo.html
+++ b/src/main/resources/templates/ott_contents/gameInfo.html
@@ -108,7 +108,7 @@
                               </span>
                             </li>
 
-                            <li><span>순위</span><span th:text="${gameInfo.rank}"></span></li>
+                            <li><span>순위</span><span th:text="${gameInfo.ranking}"></span></li>
                           </ul>
                         </div>
                       </div>
