--- a/src/main/resources/templates/admin/admin.html
+++ b/src/main/resources/templates/admin/admin.html
@@ -28,17 +28,17 @@
         display: flex; /* 플렉스 박스 사용 */
         justify-content: center; /* 가로 가운데 정렬 */
         align-items: center; /* 세로 가운데 정렬 (필요 시) */
-        gap: 10px; /* 버튼 사이 간격 */
+        gap: 5px; /* 버튼 사이 간격 */
         margin-top: 30px; /* 위쪽 여백 (필요 시) */
       }
     </style>
   </head>
 
   <body layout:fragment="content">
-    <div class="">
+    <div>
       <h1 class="text-center">관리자 크롤링 페이지</h1>
       <div class="spinner-border text-light hide" role="status"></div>
-      <div class="button-container d-flex justify-content-center">
+      <div class="button-container">
         <!-- 영화 API 불러오기 -->
         <button class="btn btn-primary" onclick="sendAsyncRequest('/admin/import/movies', '영화 API 요청 완료')">
           영화 API 불러오기
@@ -55,10 +55,9 @@
         <button class="btn btn-primary" onclick="sendAsyncRequest('/admin/crawl/game', '게임 이미지 크롤링 시작됨')">
           게임 이미지 불러오기
         </button>
+        <!-- 관리자 신고 리스트 페이지 -->
+        <a th:href="@{/admin/report/list}" class="btn">관리자 신고 리스트 페이지</a>
       </div>
-
-      <!-- 관리자 신고 리스트 페이지 -->
-      <a th:href="@{/admin/report/list}" class="btn">관리자 신고 리스트 페이지</a>
     </div>
   </body>
 </html>
