--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -22,22 +22,16 @@
                   <a th:href="@{/chart}">통계</a>
                   <ul class="dropdown">
                     <li>
-                      <a href="#" class="report-link" data-rcode="REP00CFA52B028345FCAAEB504271E20234"
-                        >장르 종류별 분포</a
-                      >
+                      <a href="#" class="report-link" data-rcode="REP00CFA52B028345FCAAEB504271E20234">장르 종류별 분포</a>
                     </li>
                     <li>
-                      <a href="#" class="report-link" data-rcode="REP0963E2B240B440BD8DF86808345C0AAA"
-                        >연령별 선호 장르</a
-                      >
+                      <a href="#" class="report-link" data-rcode="REP0963E2B240B440BD8DF86808345C0AAA">연령별 선호 장르</a>
                     </li>
                     <li>
                       <a href="#" class="report-link" data-rcode="REPE9E4D442110F4D7987411918C52AB69F">회원 현황</a>
                     </li>
                     <li>
-                      <a href="#" class="report-link" data-rcode="REPBC8878CD59FB43A6864642264263CABD"
-                        >남여 선호 장르</a
-                      >
+                      <a href="#" class="report-link" data-rcode="REPBC8878CD59FB43A6864642264263CABD">남여 선호 장르</a>
                     </li>
                   </ul>
                 </li>
@@ -52,12 +46,7 @@
           <div class="btn__all">
             <div class="primary-btn d-flex">
               <!-- 검색창 -->
-              <form
-                action="/api/movies/list"
-                method="get"
-                class="search-box"
-                style="display: flex; gap: 5px; align-items: center"
-              >
+              <form action="/api/movies/list" method="get" class="search-box" style="display: flex; gap: 5px; align-items: center">
                 <select name="content" id="content" onchange="updateCityOptions()">
                   <option value="m">영화</option>
                   <option value="g">게임</option>
@@ -72,52 +61,27 @@
                 <input type="submit" value="검색" />
               </form>
 
-              <!-- 프로필/로그아웃 -->
-              <div class="col-lg-5" style="display: flex; align-items: center; gap: 10px">
+              <!-- PENDDING 권한이면 전부 숨김 -->
+              
+              <div class="col-lg-5" style="display: flex; align-items: center; gap: 10px" >
                 <!-- 로그아웃 버튼 -->
-                <form
-                  th:if="${#authorization.expr('isAuthenticated()')}"
-                  th:action="@{/logout}"
-                  method="post"
-                  style="display: inline"
-                >
+                <form th:if="${#authorization.expr('isAuthenticated()')}" th:action="@{/logout}" method="post" style="display: inline">
                   <button type="submit" class="btn btn-outline-primary btn-sm ms-1 mr-2">로그아웃</button>
                 </form>
 
                 <!-- 로그인: 프로필 이미지 -->
-                <a
-                  th:if="${#authorization.expr('isAuthenticated()') and profileImageUrl != null}"
-                  th:href="@{/user/userProfile(id=${userId})}"
-                >
-                  <img
-                    th:src="'/images/view/' + ${profileImageUrl}"
-                    alt="프로필"
-                    class="rounded-circle border border-primary shadow-sm"
-                    style="width: 40px; height: 40px; object-fit: cover; background: #eee"
-                  />
+                <a th:if="${#authorization.expr('isAuthenticated()') and profileImageUrl != null}" th:href="@{/user/userProfile(id=${userId})}">
+                  <img th:src="'/images/view/' + ${profileImageUrl}" alt="프로필" class="rounded-circle border border-primary shadow-sm" style="width: 40px; height: 40px; object-fit: cover; background: #eee" />
                 </a>
 
                 <!-- 로그인: 기본 이미지 -->
-                <a
-                  th:if="${#authorization.expr('isAuthenticated()') and profileImageUrl == null}"
-                  th:href="@{/user/userProfile(id=${userId})}"
-                >
-                  <img
-                    src="/images/sample.jpg"
-                    alt="기본 프로필"
-                    class="rounded-circle border border-primary shadow-sm"
-                    style="width: 40px; height: 40px; object-fit: cover; background: #eee"
-                  />
+                <a th:if="${#authorization.expr('isAuthenticated()') and profileImageUrl == null}" th:href="@{/user/userProfile(id=${userId})}">
+                  <img src="/images/sample.jpg" alt="기본 프로필" class="rounded-circle border border-primary shadow-sm" style="width: 40px; height: 40px; object-fit: cover; background: #eee" />
                 </a>
 
                 <!-- 비로그인 -->
                 <a th:if="${#authorization.expr('isAnonymous()')}" th:href="@{/user/login}">
-                  <img
-                    src="/images/sample.jpg"
-                    alt="기본 프로필"
-                    class="rounded-circle border border-primary shadow-sm"
-                    style="width: 40px; height: 40px; object-fit: cover; background: #eee"
-                  />
+                  <img src="/images/sample.jpg" alt="기본 프로필" class="rounded-circle border border-primary shadow-sm" style="width: 40px; height: 40px; object-fit: cover; background: #eee" />
                 </a>
               </div>
             </div>
