--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -65,74 +65,40 @@
       }
     </style>
   </th:block>
-
+  <div layout:fragment="header"></div>
   <main layout:fragment="content" th:object="${totalUserDTO}">
-    <div class="container">
+    <div class="container mt-5">
       <div class="d-flex flex-column justify-content-center align-items-center">
         <h2 class="mb-2">회원정보 입력</h2>
         <form th:action="@{/user/register}" th:object="${totalUserDTO}" method="post" class="registerForm w-50 my-2">
           <!-- 이름 -->
           <div class="input-item" th:with="err=${#fields.hasErrors('name')}">
-            <input
-              type="text"
-              class="form-control w-100"
-              name="name"
-              th:value="${err} ? null : ${totalUserDTO.name}"
-              th:placeholder="${err} ? ${#fields.errors('name')[0]} : '이름'"
-              th:classappend="${err} ? 'input-error' : ''"
-            />
+            <input type="text" class="form-control w-100" name="name" th:value="${err} ? null : ${totalUserDTO.name}" th:placeholder="${err} ? ${#fields.errors('name')[0]} : '이름'" th:classappend="${err} ? 'input-error' : ''" />
             <span class="fas fa-user input-icon" th:classappend="${err} ? 'false-icon' : ''"></span>
           </div>
 
           <!-- 닉네임 -->
           <div class="input-item" th:with="err=${#fields.hasErrors('nickname')}">
-            <input
-              type="text"
-              class="form-control w-100"
-              name="nickname"
-              th:value="${err} ? null : ${totalUserDTO.nickname}"
-              th:placeholder="${err} ? ${#fields.errors('nickname')[0]} : '별명'"
-              th:classappend="${err} ? 'input-error' : ''"
-            />
+            <input type="text" class="form-control w-100" name="nickname" th:value="${err} ? null : ${totalUserDTO.nickname}" th:placeholder="${err} ? ${#fields.errors('nickname')[0]} : '별명'" th:classappend="${err} ? 'input-error' : ''" />
             <span class="fas fa-solid fa-circle-user input-icon" th:classappend="${err} ? 'false-icon' : ''"></span>
           </div>
 
           <!-- 아이디 -->
           <div class="input-item" th:with="err=${#fields.hasErrors('id')}">
-            <input
-              type="text"
-              class="form-control"
-              name="id"
-              th:value="${err} ? null : ${totalUserDTO.id}"
-              th:placeholder="${err} ? ${#fields.errors('id')[0]} : '아이디'"
-              th:classappend="${err} ? 'input-error' : ''"
-            />
+            <input type="text" class="form-control" name="id" th:value="${err} ? null : ${totalUserDTO.id}" th:placeholder="${err} ? ${#fields.errors('id')[0]} : '아이디'" th:classappend="${err} ? 'input-error' : ''" />
             <span class="fas fa-id-badge input-icon" th:classappend="${err} ? 'false-icon' : ''"></span>
           </div>
 
           <!-- 비밀번호 -->
           <div class="input-item" style="position: relative" th:with="err=${#fields.hasErrors('password')}">
-            <input
-              type="password"
-              class="form-control"
-              name="password"
-              th:placeholder="${err} ? ${#fields.errors('password')[0]} : '비밀번호'"
-              th:classappend="${err} ? 'input-error' : ''"
-            />
+            <input type="password" class="form-control" name="password" th:placeholder="${err} ? ${#fields.errors('password')[0]} : '비밀번호'" th:classappend="${err} ? 'input-error' : ''" />
             <span class="fas fa-lock input-icon" th:classappend="${err} ? 'false-icon' : ''"></span>
             <span class="fas fa-eye toggle-password"></span>
           </div>
 
           <!-- 비밀번호 확인 -->
           <div class="input-item" style="position: relative" th:with="err=${#fields.hasErrors('checkPassword')}">
-            <input
-              type="password"
-              class="form-control"
-              name="checkPassword"
-              th:value="${err} ? null : ${totalUserDTO.checkPassword}"
-              th:placeholder="${err} ? ${#fields.errors('checkPassword')[0]} : '비밀번호 확인'"
-              th:classappend="${err} ? 'input-error' : ''"
-            />
+            <input type="password" class="form-control" name="checkPassword" th:value="${err} ? null : ${totalUserDTO.checkPassword}" th:placeholder="${err} ? ${#fields.errors('checkPassword')[0]} : '비밀번호 확인'" th:classappend="${err} ? 'input-error' : ''" />
             <span class="fas fa-lock input-icon" th:classappend="${err} ? 'false-icon' : ''"></span>
             <span class="fas fa-eye toggle-password"></span>
           </div>
@@ -165,12 +131,18 @@
             </select>
             <span class="fas fa-venus-mars input-icon"></span>
           </div>
-          <input type="hidden" name="email" th:value="${totalUserDTO.email}">
+          <input type="hidden" name="email" th:value="${totalUserDTO.email}" />
         </form>
 
         <div class="input-item">
           <button type="button" class="site-btn mx-1 ok">결정</button>
-          <button type="button" class="site-btn reverse mx-1">취소</button>
+          <!-- 숨은 로그아웃 폼 -->
+          <form id="logoutForm"  th:action="@{/logout}" method="post" style="display: none">
+            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+          </form>
+
+          <!-- 버튼 -->
+          <button type="button" class="site-btn reverse mx-1" th:onclick="|document.getElementById('logoutForm').submit()|">취소</button>
         </div>
       </div>
     </div>
