--- a/src/main/resources/templates/admin/admin.html
+++ b/src/main/resources/templates/admin/admin.html
@@ -59,7 +59,7 @@
           게임 이미지 불러오기
         </button>
         <!-- 관리자 신고 리스트 페이지 -->
-        <a th:href="@{/admin/report/list}" class="btn">관리자 신고 리스트 페이지</a>
+        <a th:href="@{/report/list}" class="btn">관리자 신고 리스트 페이지</a>
       </div>
     </div>
   </body>
