--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -46,9 +46,9 @@
             </nav>
           </div>
         </div>
-        <div class="col-lg-5 col-sm-12">
+        <div class="col-lg-5 col-sm-12 d-flex align-items-center">
           <div class="header-btns">
-            <div class="primary-btn d-flex align-items-center">
+            <div class="primary-btn d-flex">
               <!-- 검색창 -->
               <form
                 action="/contents"
