--- a/src/main/resources/templates/ott_contents/gameInfo.html
+++ b/src/main/resources/templates/ott_contents/gameInfo.html
@@ -157,7 +157,7 @@
               <h5 id="replyCnt" th:text="'댓글 '+${replies.size} + 개"></h5>
             </div>
             <!-- 별점 -->
-            <div class="rating">
+            <div class="rating mb-3">
               <span th:text="' 평균 '+${rating}+'점'">평균 별점</span>
             </div>
             <!-- 댓글 시작 -->
