--- a/src/main/resources/templates/ott_contents/gameList.html
+++ b/src/main/resources/templates/ott_contents/gameList.html
@@ -48,7 +48,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-lg-4 col-md-6 col-sm-6" th:each="game : ${games}">
+          <div class="col-lg-4 col-md-6 col-sm-6 content-item" th:each="game : ${games}">
             <div class="product__item">
               <div class="product__item__pic">
                 <div>
