--- a/src/main/resources/templates/ott_contents/movieInfo.html
+++ b/src/main/resources/templates/ott_contents/movieInfo.html
@@ -223,7 +223,7 @@
               <textarea name="text" id="replytext" placeholder="Your Comment"></textarea>
               <div class="mb-4"><span id="currentCharCount">0</span> / <span id="maxChar">200</span>글자</div>
               <button class="btn btn-insert modalBtn" type="submit" style="font-size: medium">등록</button>
-              <button class="btn btn-cancel" type="button" style="font-size: medium">지우기</button>
+              <button class="btn btn-cancel" type="button" style="font-size: medium">취소</button>
             </form>
 
             <div th:if="${#authentication.name == 'anonymousUser'}">
